[package]
name = "make_list_of_niconico_adverts"
version = "0.0.3"
authors = ["madosuki <yurikasamaaikatsu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
regex = "1"
serde-xml-rs = "0.6"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
